--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta name="google-site-verification" content="yZeUkjTprOM6Rdm_VhDudIw4pfmKEKieO8N7ll0SXos" />
     <title>Blogi | Demo de Blog</title>
     <meta name="description"
         content="Blogi: Una demo o demostración de un blog en el que puedes para ver la calidad que consigues con nosotros al hacer para ti un sitio web. Y también puedes escribir en este blog para que nunca olvides tus recuerdos más importantes">
