--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,9 @@
         </button>
     </div>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
+     crossorigin="anonymous"></script>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="row">
