--- a/public/auth.html
+++ b/public/auth.html
@@ -22,7 +22,7 @@
 
     <div class="auth">
         <div class="googleAuth">
-            <div class="g-signin2 googleButton" data-onsuccess="onSignIn"></div>
+            <div class="g-signin2 googleButton"></div>
             <button class="btn btn-outline-primary w-100" id="cerrarSesion">Cerrar sesión</button>
         </div>
 
