--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id"
+        content="329383596127-r1m33da585qmhh3kaqcg82ie2ooq9rku.apps.googleusercontent.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -271,7 +273,7 @@
                             id="resultadoTextarea"></div>
                     </div>
 
-                    <button class="btn btn-success w-75 mt-3 mb-2">Poner comentario</button>
+                    <button class="ponerComent btn btn-success w-75 mt-3 mb-2">Poner comentario</button>
                 </div>
             </div>
             <div class="comment">
@@ -371,6 +373,18 @@
         </div>
     </div>
 
+    <!-- Alerta para cuando alguien quiere comentar y no está registrado -->
+    <div class="noRegister windowLink hidden">
+        <div>
+            <p class="principal">Para comentar, necesita tener una cuenta en Blogi</p>
+            <p class="principal">¿Quieres que se le rediriga a la página de autenticación?</p>
+            <div class="btnsNoRegister">
+                <button class="redirigir btn btn-primary">Si</button>
+                <button class="noRedirigir btn btn-secondary ">No</button>
+            </div>
+        </div>
+    </div>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4892946836803751"
         crossorigin="anonymous"></script>
 
@@ -423,6 +437,7 @@
         </df-messenger>
     </div>
 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="./index.js"></script>
 </body>
 
