--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -65,7 +65,7 @@
     <div class="toggle"></div>
 
     <!-- Foro -->
-    <div class="foro hidden">
+    <div class="foro">
         <div class="intro">
             <div class="left">
                 <strong>Busca una discusión en nuestro foro</strong>
@@ -278,7 +278,7 @@
     </div>
 
     <!-- Iniciar discusión -->
-    <div class="discusion">
+    <div class="discusion hidden">
         <h1>Inicie una discusión:</h1>
         <div class="form">
 
