--- a/public/foro/index.html
+++ b/public/foro/index.html
@@ -50,9 +50,9 @@
                 </button>
             </li>
             <li class="enlace">
-                <a href="../auth.html">
+                <a href="./">
                     <button>
-                        Iniciar Sesión
+                        Regresar al foro
                     </button>
                 </a>
             </li>
@@ -81,102 +81,10 @@
                 <img src="../img/foro.png" alt="Nuestro foro es bueno para ti">
             </div>
         </div>
-        <h2 class="titles">Discusiones recientes:</h2>
-        <div class="recientes">
-            <div class="reciente">
-                <div class="left">
-                    <a href="">
-                        <img src="../img/persona-1.png" alt="Usuario que empezó la discusión">
-                    </a>
-                    <div class="heart">
-                        <i class="fa fa-heart"></i>
-                        <span class="heartCantity">5</span>
-                    </div>
-                </div>
-                <div class="resto">
-                    <span class="titulo">Como recortar imágenes en Blogi si no quiero toda la imágen</span>
-                    <span class="contenido">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eum hic quisquam, ad enim at odio
-                        harum officia quae quod molestiae vero eius.
-                    </span>
-                    <div class="abajo">
-                        <span class="fecha">Jueves 39 de Octubre de 3039</span>
-                        <span>Tema: <span class="ctg">Historia y Arte</span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="reciente">
-                <div class="left">
-                    <a href="">
-                        <img src="../img/persona-1.png" alt="Usuario que empezó la discusión">
-                    </a>
-                    <div class="heart">
-                        <i class="fa fa-heart"></i>
-                        <span class="heartCantity">5</span>
-                    </div>
-                </div>
-                <div class="resto">
-                    <span class="titulo">Como recortar imágenes en Blogi si no quiero toda la imágen</span>
-                    <span class="contenido">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eum hic quisquam, ad enim at odio
-                        harum officia quae quod molestiae vero eius.
-                    </span>
-                    <div class="abajo">
-                        <span class="fecha">Jueves 39 de Octubre de 3039</span>
-                        <span>Tema: <span class="ctg">Historia y Arte</span></span>
-                    </div>
-                </div>
-            </div>
-        </div>
         <h2 class="titles">Discusiones que puede ver:</h2>
         <div class="discusiones">
             <div class="cadaUna">
-                <div class="reciente">
-                    <div class="left">
-                        <a href="">
-                            <img src="../img/persona-1.png" alt="Usuario que empezó la discusión">
-                        </a>
-                        <div class="heart">
-                            <i class="fa fa-heart"></i>
-                            <span class="heartCantity">5</span>
-                        </div>
-                    </div>
-                    <div class="resto">
-                        <span class="titulo">Como recortar imágenes en Blogi si no quiero toda la imágen</span>
-                        <span class="contenido">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eum hic quisquam, ad enim at
-                            odio
-                            harum officia quae quod molestiae vero eius.
-                        </span>
-                        <div class="abajo">
-                            <span class="fecha">Jueves 39 de Octubre de 3039</span>
-                            <span>Tema: <span class="ctg">Historia y Arte</span></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="reciente">
-                    <div class="left">
-                        <a href="">
-                            <img src="../img/persona-1.png" alt="Usuario que empezó la discusión">
-                        </a>
-                        <div class="heart">
-                            <i class="fa fa-heart"></i>
-                            <span class="heartCantity">5</span>
-                        </div>
-                    </div>
-                    <div class="resto">
-                        <span class="titulo">Como recortar imágenes en Blogi si no quiero toda la imágen</span>
-                        <span class="contenido">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eum hic quisquam, ad enim at
-                            odio
-                            harum officia quae quod molestiae vero eius.
-                        </span>
-                        <div class="abajo">
-                            <span class="fecha">Jueves 39 de Octubre de 3039</span>
-                            <span>Tema: <span class="ctg">Historia y Arte</span></span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
             <ul class="ctgs">
                 <li>
@@ -208,13 +116,16 @@
                 <span class="principal">Perfil del autor:</span>
                 <br>
                 <div class="campos">
-                    <span class="principal">Nombre: </span><span class="secundario" id="nombreDeAutor"></span>
+                    <span class="principal">Nombre: </span>
+                    <span class="secundario" id="nombreDeAutor"></span>
                 </div>
                 <div class="campos">
-                    <span class="principal">Correo: </span><span class="secundario" id="correoDeAutor"></span>
+                    <span class="principal">Correo: </span>
+                    <span class="secundario" id="correoDeAutor"></span>
                 </div>
                 <div class="campos">
-                    <span class="principal">Articulos: </span><span class="secundario" id="articulosDeAutor"></span>
+                    <span class="principal">Articulos: </span>
+                    <span class="secundario" id="articulosDeAutor"></span>
                 </div>
             </div>
         </div>
@@ -249,30 +160,6 @@
 
                     <button class="ponerComent btn btn-success w-75 mt-3 mb-2">Poner comentario</button>
                 </div>
-            </div>
-            <div class="comment">
-                <div class="perfil">
-                    <img src="../img/persona-1.png">
-                    <span class="nombre principal">Derek El Amado</span>
-                </div>
-                <div class="contenido">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptas distinctio consequatur
-                    alias quo amet earum? Natus voluptates provident eveniet non itaque vero, ad libero quo facere
-                    laborum earum autem.
-                </div>
-                <span class="fecha principal">Jueves 34 de Octubre 0944</span>
-            </div>
-            <div class="comment">
-                <div class="perfil">
-                    <img src="../img/persona-1.png">
-                    <span class="nombre principal">Derek El Amado</span>
-                </div>
-                <div class="contenido">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam voluptas distinctio consequatur
-                    alias quo amet earum? Natus voluptates provident eveniet non itaque vero, ad libero quo facere
-                    laborum earum autem.
-                </div>
-                <span class="fecha principal">Jueves 34 de Octubre 0944</span>
             </div>
         </div>
     </div>
@@ -324,9 +211,9 @@
     <div class="urlWindow windowLink hidden">
         <div>
             <p>Poner url o enlace:</p>
-            <input type="text" name="urlRequerida" class="urlRequerida" placeholder="Url o enlace">
-            <input type="text" name="aparecerUrl" class="aparecerUrl" placeholder="Cómo quiere que se muestre">
-            <button class="ponerUrl btn btn-success w-100">Poner</button>
+            <input type="text" name="urlRequerida" class="urlRequeridaComment" placeholder="Url o enlace">
+            <input type="text" name="aparecerUrl" class="aparecerUrlComment" placeholder="Cómo quiere que se muestre">
+            <button class="ponerUrlComment btn btn-success w-100">Poner</button>
         </div>
     </div>
 
